Change pagination metadata
