# app/Traits/HasResourcePaginatedInformation.php
@@ -4,15 +4,15 @@ namespace App\Traits;
 
 trait HasResourcePaginatedInformation
 {
-    public function paginationInformation($request, $paginated, $default)
+    public function paginationInformation($request, $paginated, $default): array
     {
-        $default['meta']['currentPage'] = $paginated['current_page'];
-        unset($default['meta']['current_page']);
-        $default['meta']['lastPage'] = $paginated['last_page'];
-        unset($default['meta']['last_page']);
-        $default['meta']['perPage'] = $paginated['per_page'];
-        unset($default['meta']['per_page']);
-
-        return $default;
+        return [
+            'pagination' => [
+                'currentPage' => $paginated['current_page'],
+                'perPage' => $paginated['per_page'],
+                'lastPage' => $paginated['last_page'],
+                'total' => $paginated['total'],
+            ]
+        ];
     }
 }
